[package]
name = "weld-codegen"
version = "0.2.4"
edition = "2021"
authors = [ "wasmcloud Team" ]
license = "Apache-2.0"
description = "Code generation for smithy models"
homepage = "https://github.com/wasmcloud/weld"
repository = "https://github.com/wasmcloud/weld"
documentation = "https://docs.rs/weld-codegen"
readme = "README.md"

[features]
default = [ "wasmbus" ]
wasmbus = []
experimental_types = [ "BigInteger", "BigDecimal"]
# 'cbor' feature generates cbor encoders and decoders (experimental)
cbor = [ ]
# 'cbor-msg' uses cbor instead of msgpack for wasmbus serialization and deserialization (experimental)
cbor-msg = ["cbor"]
BigInteger = []
BigDecimal = []

[dependencies]
atelier_assembler = "0.1"
atelier_core = "0.2"
atelier_json = "0.2"
atelier_smithy = "0.2"
bytes = "1.0"
cfg-if = "1.0"
directories = "4.0"
downloader = "0.2"
handlebars = "4.0"
Inflector = "0.11"
lazy_static = "1.4"
lexical-sort = "0.3"
minicbor = { version = "0.11", features = ["derive", "std", "half" ] }
reqwest = { version = "0.11", features = [ "blocking" ] }
rustc-hash = { version = "1.1", default_features = false }
semver = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.2"
thiserror = "1.0"
toml = "0.5"
