[package]
name = "wasmcloud-weld-docgen"
version = "0.1.0"
edition = "2018"
authors = [ "stevelr <dev@somecool.net>" ]
license = "Apache-2.0"
description = "Documentation generator"
homepage = "https://github.com/wasmcloud/weld"
repository = "https://github.com/wasmcloud/weld"
documentation = "https://docs.rs/wasmcloud-weld-docgen"
readme = "README.md"

[features]
default = []

[dependencies]
atelier_core = { git="https://github.com/stevelr/rust-atelier", branch="json-member-shape" }
atelier_smithy = { git="https://github.com/stevelr/rust-atelier", branch="json-member-shape" }
bytes = "1.0"
chrono = "0.4"
handlebars = "3.5"
Inflector = "0.11"
lazy_static = "1.4"
lexical-sort = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dependencies.wasmcloud-weld-codegen]
version = "0.1"
path = "../codegen"

#[dependencies.wasmcloud-weld-macros]
#version = "0.1"
#path = "../macros"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0"
