[package]
name = "wasmcloud-fs"
version = "0.3.2"
authors = ["wasmCloud Team"]
edition = "2018"
homepage = "https://wasmcloud.dev"
repository = "https://github.com/wasmcloud/capability-providers"
description = "Blob store capability provider (local file system) for the wasmCloud runtime"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-fs"
readme = "README.md"
keywords = ["webassembly", "wasm", "files", "wasmcloud", "blobstore"]
categories = ["wasm", "api-bindings"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enable if the provider will be statically compiled into a host
static_plugin = []

[dependencies]
log = "0.4.14"
env_logger = "0.7.1"
wasmcloud-actor-blobstore = "0.1.0"
wasmcloud-actor-core = "0.2.0"

[dependencies.wasmcloud-provider-core]
version = "0.1.0"
#path = "../../wasmcloud/crates/wasmcloud-provider-core"
