[package]
name = "wasmcloud-httpclient"
version = "0.2.0"
authors = ["wasmCloud Team"]
edition = "2018"
repository = "https://github.com/wasmcloud/capability-providers"
description = "HTTP client capability provider for the wasmCloud wasm host runtime"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-httpclient"
readme = "README.md"
keywords = ["webassembly", "wasm", "wasi", "wasmcloud", "http"]
categories = ["wasm", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
static_plugin = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wascc-codec = "0.9.0"
log = "0.4.14"
futures = "0.3.12"
env_logger = "0.8.2"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli"] }
tokio = { version = "1.1.1", features = ["rt-multi-thread", "net", "time", "macros", "signal"] }
base64 = "0.13.0"
serde_json = "1.0.61"
wasmcloud-actor-http-client = "0.1.0"
wasmcloud-actor-core = "0.2.0"

[dev-dependencies]
mockito = "0.29"
tokio = { version = "1.1.1", features = ["rt-multi-thread", "net", "time", "macros", "signal", "full"]}
