[package]
name = "wasmcloud-provider-httpclient"
version = "0.3.7"
edition = "2021"

[dependencies]
async-trait = "0.1"
base64 = "0.13"
bytes = "1.0"
chrono = "0.4"
crossbeam="0.8"
futures = "0.3"
log = "0.4"
once_cell = "1.8"
reqwest = "0.11"
rmp-serde = "0.15"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
wasmcloud-interface-httpclient = "0.3"
wasmbus-rpc = "0.6"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.1.9"

[[bin]]
name = "httpclient"
path = "src/main.rs"
