[package]
name = "wasmcloud-provider-httpclient"
version = "0.4.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
atty = "0.2"
base64 = "0.13"
bytes = "1.0"
chrono = "0.4"
crossbeam="0.8"
futures = "0.3"
once_cell = "1.8"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
rmp-serde = "0.15"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmcloud-interface-httpclient = "0.5"
wasmbus-rpc = "0.8"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.3.1"

[[bin]]
name = "httpclient"
path = "src/main.rs"
