[package]
name = "wasmcloud-provider-httpclient"
version = "0.5.3"
edition = "2021"

[dependencies]
async-trait = "0.1"
atty = "0.2"
base64 = "0.13"
bytes = "1.2"
chrono = "0.4"
crossbeam = "0.8"
futures = "0.3"
once_cell = "1.8"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
rmp-serde = "1.1.0"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

wasmcloud-interface-httpclient = "0.7.0"
wasmbus-rpc = { version = "0.10.0", features = ["otel"] }

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.5.0"

[[bin]]
name = "httpclient"
path = "src/main.rs"
