[package]
name = "wasmcloud-provider-httpserver"
description = "Http server for wasmcloud, using warp. This package provides a library, and a capability provider with the 'wasmcloud:httpserver' contract."
license = "Apache-2.0"
authors = ["wasmCloud Team"]
version = "0.19.1"
edition = "2021"

[dependencies]
async-trait = "0.1.52"
atty = "0.2"
base64 = "0.21"
bytes = "1.2"
dashmap = "5.4.0"
flume = "0.10.14"
futures = "0.3"
http = "0.2"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
smithy-bindgen = "0.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.7"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
warp = { version="0.3", features=["tls"] }
wasmbus-rpc = { version = "0.14", features = ["otel"] }

[dev-dependencies]
assert_matches = "1.5"
blake2 = "0.10.4"
reqwest = { version = "0.11", features = ["json"]}
wasmcloud-test-util = "0.10"

[lib]
name = "wasmcloud_provider_httpserver"
path = "src/lib.rs"

[[bin]]
name = "httpserver"
path = "bin/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true

