[package]
name = "wasmcloud-provider-kv-vault"
description = "Hashicorp Vault capability provider for the wasmcloud KeyValue capability contract wasmcloud:keyvalue"
authors = [ "wasmcloud Team" ]
version = "0.1.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/wasmcloud/capability-providers"
publish = false

[dependencies]
async-trait = "0.1"
log = "0.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "rt"] }
vaultrs = "0.5.4"
wasmbus-rpc = "0.8.2"

# test dependencies
[dev-dependencies]
rand = "0.8"
env_logger = "0.9"
wasmcloud-test-util = "0.3.1"

[build-dependencies]
# for local code generation of wasmbus-interface-keyvalue
weld-codegen = "0.4.2"

[lib]
name = "kv_vault_lib"
path = "src/lib.rs"

[[bin]]
name = "kv-vault"
path = "src/main.rs"
