[package]
name = "wasmcloud-provider-kv-vault"
description = "Hashicorp Vault capability provider for the wasmcloud KeyValue capability contract wasmcloud:keyvalue"
authors = [ "wasmcloud Team" ]
version = "0.1.2"
edition = "2021"
readme = "README.md"
repository = "https://github.com/wasmcloud/capability-providers"
publish = false

[dependencies]
async-trait = "0.1"
atty = "0.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2.2"
vaultrs = "0.6.0"
wasmbus-rpc = "0.8.2"

[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
# We don't use paste directly, but we pin to a version that works with aarch64-linux
paste = "=1.0.6"

# test dependencies
[dev-dependencies]
rand = "0.8"
env_logger = "0.9"
wasmcloud-test-util = "0.3.1"

[build-dependencies]
# for local code generation of wasmbus-interface-keyvalue
weld-codegen = "0.4.2"

[lib]
name = "kv_vault_lib"
path = "src/lib.rs"

[[bin]]
name = "kv-vault"
path = "src/main.rs"
