[package]
name = "wasmcloud-provider-kvredis"
version = "0.23.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
atty = "0.2"
base64 = "0.13"
bytes = "1.0"
chrono = "0.4"
crossbeam = "0.8"
futures = "0.3"
once_cell = "1.8"
redis = { version = "0.24.0", features = ["tokio-rustls-comp", "aio", "connection-manager", "tls-rustls-webpki-roots"] }
rmp-serde = "1.1.0"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmcloud-interface-keyvalue = "0.11"
wasmbus-rpc = { version = "0.14", features = ["otel"] }

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.10"
rand = "0.8"

[[bin]]
name = "kvredis"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
