[package]
name = "wasmcloud-provider-lattice-controller"
description = "Capability provider that allows actors to interact with lattice control interfaces"
version = "0.9.1"
edition = "2021"

[dependencies]
async-nats = "0.18.0"
async-trait = "0.1"
atty = "0.2"
base64 = "0.13"
bytes = "1.0"
futures = "0.3"
once_cell = "1.8"
rmp-serde = "1.0.0"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wascap = "0.8.0"
wasmbus-rpc = { version = "0.10", features = ["otel"] }
wasmcloud-control-interface = "0.20.1" # lattice client
wasmcloud-interface-lattice-control = "0.14.1" # provider contract

[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.dependencies]
# We don't use paste directly, but we pin to a version that works with aarch64-linux
paste = "=1.0.6"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.5.0"

[[bin]]
name = "lattice-controller"
path = "src/main.rs"
