[package]
name = "wasmcloud-logging"
version = "0.9.1"
authors = ["wasmCloud Team"]
edition = "2018"
homepage = "https://wasmcloud.dev"
repository = "https://github.com/wasmcloud/capability-providers"
description = "Structured logging capability provider for the wasmCloud host runtime"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-logging"
readme = "README.md"
keywords = ["webassembly", "wasm", "wasi", "wasmcloud", "logging"]
categories = ["wasm", "api-bindings"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
static_plugin = [] # Enable to statically compile this into a host

[dependencies]
log = "0.4.14"
env_logger = "0.8.2"
wasmcloud-provider-core = "0.1.0"
wasmcloud-actor-logging = "0.1.0"
