[package]
name = "wasmbus-macros"
version = "0.1.8"
edition = "2021"
authors = [ "wasmcloud Team" ]
license = "Apache-2.0"
description = "derive macros for wasmbus-rpc"
homepage = "https://github.com/wasmcloud/weld"
repository = "https://github.com/wasmcloud/weld"
documentation = "https://docs.rs/wasmcloud-weld-macros"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
