[package]
name = "wasmcloud-nats-kvcache"
version = "0.5.0"
authors = ["wasmCloud Team"]
edition = "2018"
license-file = "LICENSE.txt"
description = "A key-value capability provider for wasmCloud that replicates data changes over NATS"
repository = "https://github.com/wasmcloud/capability-providers"
documentation = "https://wasmcloud.com"
readme = "README.md"
keywords = [
    "cache",
    "nats",
    "keyvalue",
    "webassembly",
    "wasmcloud"    
]
categories = [
    "wasm", "api-bindings",
]


[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enable if the provider will be statically compiled into a host
static_plugin = []

[dependencies]
wasmcloud-actor-keyvalue = "0.2.0"
wasmcloud-actor-core = "0.2.0"
nats = "0.8.6"
wasmcloud-provider-core = "0.1.0"
wascap = "0.6.0"
env_logger = "0.8.2"
uuid = { version = "0.8.1", features = ["v4"] }
lazy_static = "1.4.0"
log = "0.4.11"
eventsourcing = "0.1.5"
eventsourcing-derive = "0.1.3"
serde = { version = "1.0.118", features = ["derive"]}
crossbeam = "0.8.0"
crossbeam-channel = "0.5.0"