[package]
name = "wasmcloud-provider-nats"
version = "0.13.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
atty = "0.2"
base64 = "0.13"
bytes = "1.0"
chrono = "0.4"
crossbeam="0.8"
futures = "0.3"
once_cell = "1.8"
rmp-serde = "0.15"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wascap = "0.8"
wasmbus-rpc = "0.8.2"
wasmcloud-interface-messaging = "0.5.0"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.3.1"

[[bin]]
name = "nats_messaging"
path = "src/main.rs"
