[package]
name = "wasmcloud-provider-nats"
version = "0.15.0"
edition = "2021"

[dependencies]
async-nats = "0.23"
async-trait = "0.1"
atty = "0.2"
base64 = "0.13"
bytes = "1.0"
chrono = "0.4"
crossbeam="0.8"
futures = "0.3"
once_cell = "1.8"
rmp-serde = "1.1.0"
serde_bytes = "0.11"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wascap = "0.8.0"

wasmbus-rpc = { version = "0.11.2", features = [ "otel" ] }
wasmcloud-interface-messaging = "0.8.1"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.6.4"

[[bin]]
name = "nats_messaging"
path = "src/main.rs"
