[package]
name = "wasmcloud-provider-nats"
version = "0.18.1"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
async-nats = "0.30"
async-trait = "0.1"
atty = "0.2"
base64 = "0.13"
bytes = "1.0"
chrono = "0.4"
crossbeam="0.8"
futures = "0.3"
once_cell = "1.8"
rmp-serde = "1.1.0"
rustls-pemfile = "2.0"
serde = {version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.25"
toml = "0.5"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wascap = "0.8.0"

wasmbus-rpc = { version = "0.14", features = [ "otel" ] }
wasmcloud-interface-messaging = "0.10"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.10"

[[bin]]
name = "nats_messaging"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
