[package]
name = "wasmcloud-streams-redis"
version = "0.5.0"
authors = ["wasmCloud Team"]
edition = "2018"
homepage = "https://wasmcloud.dev"
repository = "https://github.com/wasmcloud/capability-providers"
description = "Redis Event Streams capability provider for the wasmCloud host runtime"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-streams-redis"
readme = "README.md"
keywords = ["webassembly", "events", "stream", "wasmcloud", "redis"]
categories = ["wasm", "api-bindings", "database"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enable if the provider will be statically compiled into a host
static_plugin = []

[dependencies]
wasmcloud-provider-core = "0.1.0"
wasmcloud-actor-eventstreams = "0.2.0"
wasmcloud-actor-core = "0.2.2"
log = "0.4.8"
env_logger = "0.8.3"
redis-streams = "0.1.1"
