[package]
name = "wasmcloud-redis"
version = "0.11.0"
authors = ["wasmCloud Team"]
edition = "2018"
homepage = "https://wasmcloud.dev"
repository = "https://github.com/wasmcloud/capability-providers"
description = "Redis capability provider for the wasmCloud WebAssembly actor runtime"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-redis"
readme = "README.md"
keywords = ["webassembly", "wasm", "keyvalue", "wasmcloud", "redis"]
categories = ["wasm", "api-bindings"]

[badges]
maintenance = { status = "actively-developed" }

[features]
# Enable if the provider will be statically compiled into a host
static_plugin = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.8.2"
lazy_static = "1.4.0"
crossbeam-channel = "0.5.0"
crossbeam = "0.8.0"
rmp-serde = "0.14.4"
serde = {version = "1.0.117", features = ["derive"] }
crossbeam-utils = "0.8.1"
log = "0.4.11"
wascc-codec = "0.9.0"
redis = "0.17.0"
wasmcloud-actor-core = "0.2.0"
wasmcloud-actor-keyvalue = "0.2.0"
