[package]
name = "wasmcloud-redisgraph"
version = "0.2.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"
homepage = "https://wasmcloud.dev"
repository = "https://github.com/wasmcloud/capability-providers"
description = "RedisGraph implementation of the wasmCloud Graph Database capability provider contract"
license = "Apache-2.0"
documentation = "https://docs.rs/wasmcloud-redisgraph"
readme = "README.md"
keywords = ["webassembly", "wasm", "graphdb", "graph", "wasmcloud"]
categories = ["wasm", "api-bindings", "database"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Enable if the provider will be statically compiled into a host
static_plugin = []

[dependencies]
actor-graphdb = { git = "https://github.com/wasmCloud/actor-interfaces", branch = "main"}
actor-core = { git = "https://github.com/wasmCloud/actor-interfaces", branch = "main"}
wascc-codec = "0.9.0"
log = "0.4.13"
env_logger = "0.8.2"
redis = "0.16.0"
redisgraph = "0.5.0"
