[package]
name = "wasmbus-rpc"
version = "0.8.3"
authors = [ "wasmcloud Team" ]
license = "Apache-2.0"
description = "Runtime library for actors and capability providers"
homepage = "https://github.com/wasmcloud/weld"
repository = "https://github.com/wasmcloud/weld"
documentation = "https://docs.rs/wasmbus-rpc"
readme = "README.md"
edition = "2021"

# don't push build.rs
exclude = [ "build.rs" ]

[features]
default = [ "chunkify" ]
BigInteger = [ "num-bigint" ]
BigDecimal = [ "bigdecimal" ]
# non-working feature - used for internal testing of async-rewrite branch of nats-io/nats.rs
#async_rewrite = [ "nats-experimental" ]
chunkify = [ "nats" ]

[dependencies]
async-trait = "0.1"
base64 = "0.13"
cfg-if = "1.0"
minicbor = { version = "0.13", features = ["std", "partial-skip-support"] }
rmp-serde = { version = "0.15.4" }
serde_bytes = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
time = "0.3.7"
tokio-timer = "0.2"
toml = "0.5"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.2"
wasmbus-macros = { path = "../macros", version = "0.1.8" }
minicbor-ser = "0.1.2"

#BigInteger support
num-bigint = { version = "0.4", optional = true }
#BigDecimal support
bigdecimal = { version = "0.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
nats-aflowt = "0.16.104"
nats = { version = "0.18", optional = true }
nkeys = "0.2"
once_cell = "1.8"
uuid = { version = "0.8", features = ["v4", "serde"] }
wascap = "0.8.0"
ring = "0.16"
data-encoding = "2.3"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
atty = "0.2"

[dev-dependencies]
regex = "1"
env_logger = "0.9.0"

[build-dependencies]
weld-codegen = { version = "0.4.1", path = "../codegen" }
