[package]
name = "wasmbus-rpc"
version = "0.9.3"
authors = [ "wasmcloud Team" ]
license = "Apache-2.0"
description = "Runtime library for actors and capability providers"
homepage = "https://github.com/wasmcloud/weld"
repository = "https://github.com/wasmcloud/weld"
documentation = "https://docs.rs/wasmbus-rpc"
readme = "README.md"
edition = "2021"

# don't push build.rs
exclude = [ "build.rs" ]

[features]
default = [ ]
BigInteger = [ "num-bigint" ]
BigDecimal = [ "bigdecimal" ]
prometheus = [ "dep:prometheus" ]
otel = ["opentelemetry", "tracing-opentelemetry", "opentelemetry-otlp"]

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1"
base64 = "0.13"
bytes = "1.1.0"
cfg-if = "1.0"
minicbor = { version = "0.17.1", features = ["std"] }
rmp-serde = "1.1.0"
serde_bytes = "0.11"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
time = "0.3.7"
tokio-timer = "0.2"
toml = "0.5"
tracing = { version = "0.1.34", features = ["log"] }
tracing-futures = "0.2"
wasmbus-macros = { path = "../macros", version = "0.1.10" }
minicbor-ser = "0.1.2"

# BigInteger support
num-bigint = { version = "0.4", optional = true }
# BigDecimal support
bigdecimal = { version = "0.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-nats = "0.17.0"
nats = "0.22.0"
nkeys = "0.2"
once_cell = "1.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
wascap = "0.8.0"
sha2 = "0.10.2"
data-encoding = "2.3"
tracing-subscriber = { version = "0.3.7", features = ["env-filter", "json"] }
atty = "0.2"
opentelemetry = { version = "0.17", features = ["rt-tokio"], optional = true }
tracing-opentelemetry = { version = "0.17", optional = true }
lazy_static = "1.4"
opentelemetry-otlp = { version = "0.10", features = ["http-proto", "reqwest-client"], optional = true }

prometheus = { version = "0.13", optional = true }

[dev-dependencies]
regex = "1"
clap = { version = "3.2.5", features = ["derive"] }

[build-dependencies]
weld-codegen = { version = "0.4.6", path = "../codegen" }
